[package]
authors = ["Andre Bogus <bogusandre@gmail.de>", "Joshua Landau <joshua@landau.ws>"]
description = "count occurrences of a given byte, or the number of UTF-8 code points, in a byte slice, fast"
name = "bytecount"
version = "0.5.1"
license = "Apache-2.0/MIT"
repository = "https://github.com/llogiq/bytecount"
categories = ["algorithms", "no-std"]
readme = "README.md"
exclude = ["/.travis.yml", "/appveyor.yml"]

[badges]
travis-ci = { repository = "llogiq/bytecount" }
appveyor = { repository = "llogiq/bytecount" }

[lib]
bench = false

[features]
generic-simd = ["packed_simd"]
runtime-dispatch-simd = []
html_report = []

[dependencies]
packed_simd = { version = "0.3.1", optional = true }

[dev-dependencies]
quickcheck = "0.8"
rand = "0.6"
criterion = { version = "0.2.7", default-features = false }

[[bench]]
name = "bench"
harness = false
